--- a/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.tex
+++ b/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.tex
@@ -232,14 +232,14 @@ that animate the interests but which presently remain elusive.
 
 Psychological scientists are taught that ``correlation does not imply
 causation.'' By ``correlation,'' we refer to statistical measures of
-association between variables. Most statistical techniques ---- from
-t-tests to structural equation models -- estimate associations from
-data. Although we know that measuring associations does not imply
-causation, in observational settings, we often persist in reporting
-statistical associations as if they are meaningful and, perhaps, even as
-tentative evidence for causation. The purpose of this chapter is to
-clarify why such reporting is confused and misleading, and to guide you
-toward better practices.
+association between variables. Most statistical techniques ---from
+t-tests to structural equation models- estimate associations from data.
+Although we know that measuring associations does not imply causation,
+in observational settings, we often persist in reporting statistical
+associations as if they are meaningful and, perhaps, even as tentative
+evidence for causation. The purpose of this chapter is to clarify why
+such reporting is confused and misleading, and to guide you toward
+better practices.
 
 What do we mean by ``causation?'' Causation has been a topic of
 extensive interest and debate in philosophy
@@ -561,8 +561,8 @@ This notation means that the potential outcomes \(Y(a)\) are independent
 of (\(\coprod\)) the treatment assignment \(A\). Importantly, the
 observed outcomes need not be independent of treatment. Note that we do
 not require that exposure is independent of the actual outcomes under
-exposure -- \(Y|A\) --, which would be equivalent to requiring there can
-be no causal effects for treatment! Randomisation achieves unconditional
+exposure (\(Y|A\)), which would be equivalent to requiring there can be
+no causal effects for treatment! Randomisation achieves unconditional
 independence, allowing us to estimate average causal effects because
 treatments remain independent of potential outcomes under treatment. Put
 differently, randomisation ensures that average treatment differences
@@ -705,41 +705,42 @@ individuals from accessing specific environments.
 
 \subsubsection{Summary}\label{summary}
 
-Causal inference requires statistical inference; however, statistics
-comes near the end of a workflow that begins by stating a causal
-quantity with reference to contrasts that would be obtained if we had
-the full data for the population of interest treated at different levels
-of the intervention (\citeproc{ref-ogburn2021}{Ogburn and Shpitser
-2021}). We then seek to understand how these contrasts may be estimated
-from the data we have.
+Causal inference fundamentally relies on statistical inference; however,
+statistics is only a part of a larger workflow that begins with defining
+a causal quantity. This involves specifying contrasts that would be
+observed if we had complete data for the population of interest, treated
+at different levels of the intervention
+(\citeproc{ref-ogburn2021}{Ogburn and Shpitser 2021}). The next step is
+to determine how these contrasts can be estimated from the available
+data.
 
-Standard practices in statistical modelling, such as regression
-adjustment and structural equation modelling, frequently fall short in
-estimating causal effects because our models do not attempt to state
-well defined treatments to be compared, and do not appropriately account
-for the causal structures that may bias treatment-outcome associations
-in the data.
+Standard statistical practices, such as regression adjustment and
+structural equation modelling, often fail to accurately estimate causal
+effects. This is largely because these models typically do not
+explicitly define the treatments being compared, nor do they properly
+account for the causal structures that can bias treatment-outcome
+associations.
 
-In the next section, we introduce causal directed acyclic graphs (causal
-DAGs) -- intuitive graphical tools that allow investigators to evaluate
-the complex conditional dependencies required to assess the conditional
-exchangeability assumption of ``no unmeasured confounders'' by
-inspecting relationships on a graph according to a simple algorithm know
-as the rules of d-separation (\citeproc{ref-pearl1995}{Pearl 1995},
-\citeproc{ref-pearl2009a}{2009b}). We shall discover a second use:
-Causal DAGs demonstrate how common practices in statistical modelling
-such as over-adjustment in regression and mediation analysis in
-structural equation modelling, may inadvertently introduce bias through
-inappropriate variable adjustment. Such over-adjustment can distort and
-mask true causal associations. In causal inference, we call non-causal
-associations ``spurious'' because the association lacks any coherent
-interpretation. It is unclear how to interpret a non-causal association
-because it may indicate no causal association, a causal association with
-a different magnitude, or a causal association in the opposite
-direction. By making the causal structure explicit and by carefully
-considering which variables to adjust for, causal DAGs may help
-environmental psychologists better estimate causal effects in
-environmental psychology.
+In the following section, we introduce causal directed acyclic graphs
+(causal DAGs) -- intuitive graphical tools that help researchers
+evaluate the complex conditional dependencies needed to satisfy the ``no
+unmeasured confounders'' assumption. This is done by inspecting
+relationships in a graph using a straightforward algorithm known as the
+rules of d-separation (\citeproc{ref-pearl1995}{Pearl 1995},
+\citeproc{ref-pearl2009a}{2009b}). Causal DAGs also reveal how standard
+practices in statistical modelling, such as over-adjustment in
+regression or mediation analysis in structural equation modelling, may
+inadvertently introduce bias through inappropriate variable adjustment.
+Such over-adjustment can obscure or distort true causal relationships.
+
+In causal inference, non-causal associations are termed ``spurious''
+because they lack coherent interpretation. It is often unclear how to
+interpret such associations, as they might imply no causal effect, a
+causal effect of a different magnitude, or even a causal effect in the
+opposite direction. By explicitly representing the causal structure and
+carefully selecting which variables to adjust for, causal DAGs can help
+environmental psychologists more effectively estimate causal effects
+within their research.
 
 \subsection{Part 2: An Introduction to Causal
 Diagrams}\label{section-part2}
@@ -750,16 +751,16 @@ We introduce causal DAGs by defining essential terminology. Refer to
 \subsubsection{Elements of Causal
 Diagrams}\label{elements-of-causal-diagrams}
 
-A causal directed acyclic graph is a diagram that clarifies whether and
-how the assumption of conditional exchangeability (no unmeasured
-confounders) may be satisfied from data. A causal DAG is constructed
-with the aim of evaluating this assumption for a specific treatment
-variable (or set of treatment variables) and a specific outcome (or set
-of outcomes). When there are multiple treatments, the assumptions
-required for causal identification become increasingly complex. Here, we
-restrict our focus to the setting in which there is one treatment
-variable. The difficulty of ensuring identification for multiple
-treatments will become evident from this restricted setting.
+A causal directed acyclic graph (DAG) is a diagram that clarifies
+whether and how the assumption of conditional exchangeability (no
+unmeasured confounders) may be satisfied from data. A causal DAG is
+constructed with the aim of evaluating this assumption for a specific
+treatment variable (or set of treatment variables) and a specific
+outcome (or set of outcomes). When there are multiple treatments, the
+assumptions required for causal identification become increasingly
+complex. Here, we restrict our focus to the setting in which there is
+one treatment variable. The difficulty of ensuring identification for
+multiple treatments will become evident from this restricted setting.
 
 It is important to note at the outset that in a causal DAG, we do not
 attempt to represent all causal relationships within a system, but only
@@ -776,8 +777,8 @@ identified from data.
 Nodes represent variables --- or states of the world relevant to our
 research question.
 
-\paragraph{\texorpdfstring{2. \textbf{Arrows
-(Edges)}}{2. Arrows (Edges)}}\label{arrows-edges}
+\paragraph{\texorpdfstring{2. \textbf{Arrows (also known as
+Edges)}}{2. Arrows (also known as Edges)}}\label{arrows-also-known-as-edges}
 
 Arrows indicate the direction and presence of causal relationships
 between nodes. They represent the assumed flow of causal influence from
@@ -803,8 +804,7 @@ assignment is essentially random, and any observed association between
 We denote variables that we ``control for,'' ``condition on,'' or
 ``adjust for'' by enclosing them in a box: \(\boxed{L}\).
 
-\subsubsection{The Rules of
-d-Separation}\label{the-rules-of-d-separation}
+\subsubsection{d-Separation}\label{d-separation}
 
 In causal diagrams, d-separation is a graphical criterion used to
 determine whether a set of variables is independent of another set,
@@ -818,68 +818,86 @@ dependent (\citeproc{ref-pearl1995}{Pearl 1995},
 \citeproc{ref-pearl2009a}{2009b}). Note that the ``d'' in d-separation
 stands for ``directional.''
 
-We next introduce the rules of d-separation, which help us identify
-confounders and develop strategies for valid causal inference from
-statistical associations (\citeproc{ref-pearl1995}{Pearl 1995},
-\citeproc{ref-pearl2009a}{2009b}).
+The rules of d-separation may be briefly stated as follows:
 
-\paragraph{Blocked Paths and
-d-Separation}\label{blocked-paths-and-d-separation}
+\paragraph{1. Fork (Common Cause):}\label{fork-common-cause}
 
-A path is ``blocked'' when a node on it prevents causal influence from
-passing between variables. We say that two variables \(A\) and \(B\) are
-d-separated when all paths between them are blocked, which we denote as
-\(A \coprod B\). D-separation implies that there is no statistical
-association between these variables, given the conditioning set. It
-helps us identify which variables need to be controlled to ensure valid
-causal inference.
+Diagram: \(B \leftarrow \boxed{A} \rightarrow C\)
 
-\paragraph{Open Paths}\label{open-paths}
+Implication: conditioning on the common cause \(A\) blocks the
+association between \(B\) and \(C\) . Therefore, \(B\) and \(C\) are
+independent given \(A\) :
 
-An path is ``open'' if at least one route between variables remains
-unblocked, allowing the transmission of association---even without
-direct causation (\(A \cancel\coprod B\)). Open paths imply that there
-is still potential for information, influence, or confounding to flow
-between \(A\) and \(B\), which can introduce bias into causal estimates
-if left uncontrolled.
+\[
+ B \coprod C \mid A
+ \]
 
-\paragraph{Pearl's Backdoor Path
-Criterion}\label{pearls-backdoor-path-criterion}
+\paragraph{2. Chain (Mediator):}\label{chain-mediator}
 
-Pearl's backdoor path criterion is a rule used to identify which
-variables must be controlled to obtain an unbiased estimate of the
-causal effect of one variable on another. A set of variables \(A\)
-satisfies the backdoor criterion for estimating the causal effect of
-\(B\) on \(C\) if:
+Diagram: \(A \rightarrow \boxed{B} \rightarrow C\)
+
+Implication: conditioning on the mediator \(B\) blocks the association
+between \(A\) and \(C\) . Thus, \(A\) and \(C\) are independent given
+\(B\) : \[
+ A \coprod C \mid B
+ \]
+
+\paragraph{3. Collider (Common Effect):}\label{collider-common-effect}
+
+Diagram: \(A \rightarrow \boxed{C} \leftarrow B\)
+
+Implication: conditioning on the common effect \(C\) (or any of its
+descendants) opens the path between \(A\) and \(B\) , introducing
+dependence. Hence, \(A\) and \(B\) are dependent given \(C\):
+
+\[
+A \cancel \coprod B \mid C
+\]
+
+We can restate the rules d-separation as follows:
 
 \begin{enumerate}
-\def\labelenumi{(\arabic{enumi})}
+\def\labelenumi{\arabic{enumi}.}
 \tightlist
 \item
-  No variable in \(A\) is a descendant of \(B\).
+  \textbf{Colliders block paths when unconditioned:} an open path (with
+  no variables conditioned on) is blocked if it contains a collider--- a
+  node where two arrows converge. If
+  \(A \rightarrow \boxed{C} \leftarrow B\), then \(A\) and \(B\) are
+  blocked from being associated with each other when \(C\) is not
+  conditioned upon.
 \item
-  \(A\) blocks every backdoor path between \(B\) and \(C\).
+  \textbf{Conditioning on a collider opens a path:} conditioning on a
+  collider opens a previously blocked path, potentially introducing an
+  association between variables that are not causally related. If
+  \(A \rightarrow \boxed{C} \leftarrow B\), conditioning on \(C\) allows
+  information to flow between \(A\) and \(B\), leading to a possible
+  association in the absence of a direct causal association.
+\item
+  \textbf{Conditioning on a descendant of a collider also opens the
+  path:} conditioning on a descendant of a collider has a similar
+  effect. If \(A \rightarrow \boxed{C} \leftarrow B\), and \(C \to D\)
+  then conditioning on \(C^{\prime}\) is akin to conditioning on \(C\),
+  the path \(A \rightarrow C \rightarrow \boxed{C^\prime} \leftarrow B\)
+  becomes unblocked. Thus, conditioning on \(C^\prime\) opens an
+  association between \(A\) and \(B\).
+\item
+  \textbf{Conditioning on non-collider nodes blocks the path:} if a path
+  does not contain a collider, conditioning on any variable along that
+  path blocks it. For instance, in the diagram
+  \(A \rightarrow \boxed{B} \rightarrow C\) conditioning on \(B\) blocks
+  the path from \(A\) to \(C\), rendering \(A\) and \(C\) conditionally
+  independent given \(B\) (\citeproc{ref-hernan2024WHATIF}{Hernan and
+  Robins 2024 p. 78}; \citeproc{ref-pearl2009a}{Pearl 2009b}).
 \end{enumerate}
 
-A backdoor path is any path between \(B\) and \(C\) that starts with an
-arrow pointing into \(B\), and ends with an arrow pointing out of \(C\)
-(here we ignore the direction of the arrows). These paths allow for bias
-such that the statistical association between \(B\) and \(C\) does not
-reflect a causal association. By blocking all backdoor paths,
-conditioning on \(\boxed{A}\) removes spurious associations between
-\(B\) and \(C\), allowing for an unbiased estimate of the causal effect.
-
-\subsubsection{The Five Elementary Graphical Structures of Causality and
-Five Rules for Confounding Control}\label{sec-five-elementary}
-
-To uncover causal insights from statistical relationships, we must
-understand five basic graphical structures and the corresponding rules
-for confounding control. These structures help identify how variables in
-a system are connected and how to use those connections to avoid bias
-when estimating causal effects. Remember that balancing confounders
-across treatments requires ensuring statistical independence between
-potential outcomes and treatment within groups defined by measured
-covariates.
+Pearl proved these the rules of d-separation in the 1990s, demonstrating
+that we may use causal directed acyclic graphs to evaluate the
+conditions under which consistent causal effect estimate are possible
+from data (\citeproc{ref-pearl1995}{Pearl 1995},
+\citeproc{ref-pearl2009a}{2009b}). Note again that the structures in a
+graph must be assumed and cannot generally be verified by the data
+alone.
 
 \paragraph{Absence of Causality: Two Variables with No
 Arrows}\label{absence-of-causality-two-variables-with-no-arrows}
@@ -893,6 +911,8 @@ knowing something about \(A\) does not give us any information about
 \xorxALARGE
 \]
 
+That is, as two nodes without any linking arrow.
+
 \paragraph{Causal Structure 1: Direct Causation Between Two
 Variables}\label{causal-structure-1-direct-causation-between-two-variables}
 
@@ -903,6 +923,8 @@ This direct causal link is graphically depicted as:
 \[
 \xtoxALARGE
 \]
+
+That is, as two nodes linked by an arrow.
 
 \paragraph{\texorpdfstring{\textbf{Rule 1: Ensure That the Treatment
 Precedes the
@@ -938,15 +960,17 @@ and \(C\) (\(A \rightarrow B\) and \(A \rightarrow C\)). This makes
 \forkLARGE
 \]
 
-\paragraph{Rule 2: Condition on the Common Cause to Block
-Confounding}\label{rule-2-condition-on-the-common-cause-to-block-confounding}
+\paragraph{Rule 2: Condition on the Common Cause to Block Confounding of
+The Treatment/Outcome
+Association}\label{rule-2-condition-on-the-common-cause-to-block-confounding-of-the-treatmentoutcome-association}
 
 To estimate the causal effect between \(B\) and \(C\), we need to adjust
 for the common cause \(A\) (indicated by \(\boxed{A}\)). This adjustment
 blocks the confounding path and removes any non-causal association
 between \(B\) and \(C\).
 
-\subparagraph{Motivating Example}\label{motivating-example-1}
+\subparagraph{Fork Structure: Motivating
+Example}\label{fork-structure-motivating-example}
 
 Suppose data reveals that areas with higher rates of bicycle commuting
 also have lower levels of psychological distress. Does bicycle commuting
@@ -967,8 +991,8 @@ This is an example of a spurious association -- one that that does not
 arise from a direct causal relationship between \(B\) and \(C\) but
 rather from their common cause, \(A\)
 
-\paragraph{Causal Structure 3: The Chain Structure---A
-Mediator}\label{causal-structure-3-the-chain-structurea-mediator}
+\paragraph{Causal Structure 3: The Chain Structure
+(Mediators)}\label{causal-structure-3-the-chain-structure-mediators}
 
 The chain structure (\(A \rightarrow B \rightarrow C\)) illustrates a
 scenario where \(A\) affects \(B\), and \(B\) in turn affects \(C\). In
@@ -979,8 +1003,9 @@ and \(C\). Graphically:
 \chainLARGE
 \]
 
-\paragraph{Rule 3: Avoid Conditioning on the Mediator for Total
-Effect}\label{rule-3-avoid-conditioning-on-the-mediator-for-total-effect}
+\paragraph{Rule 3: Avoid Conditioning on the Mediator for Total Effect
+of the Treatment and
+Outcome}\label{rule-3-avoid-conditioning-on-the-mediator-for-total-effect-of-the-treatment-and-outcome}
 
 If we are interested in estimating the total causal effect of \(A\) on
 \(C\), we should not condition on the mediator \(B\). Conditioning on
@@ -993,7 +1018,8 @@ confounders without attending to hazards of over-adjustment. Consider
 the following example of how over-adjustment can distort causal
 pathways, potentially masking true relationships.
 
-\subparagraph{Motivating Example}\label{motivating-example-2}
+\subparagraph{Conditioning on a Mediator: Motivating
+Example}\label{conditioning-on-a-mediator-motivating-example}
 
 Suppose we examine whether renovating green spaces (\(A\)) in urban
 areas reduces crime rates (\(C\)). The renovation improves community
@@ -1001,17 +1027,23 @@ engagement (\(B\)), which then reduces crime. If we adjust for community
 engagement, it might look like the green space renovation has no effect
 on crime, when in fact it does, but indirectly through community
 engagement. This example illustrates the risks of
-\textbf{over-conditioning bias.} Let us denote the relative timing of
-events using subscripts. Here, we assume that \(A_1 \to B_2 \to C_3\).
-It is clear from the rules of d-separation that
-\(A_{1} \rightarrow \boxed{B_2} \rightarrow C_{3}\) (conditioning on
-\(B_2\)) blocks the path from \(A_1\) to \(C_3\). However, what if
-\(B_0 \to A_1\) and \(B_0 \to C_3\). The rules of d-separation tell us
-that to obtain an unbiased causal effect estimate of \(A_1 \to C_3\) we
-must condition on \(B_0\). With cross-sectional data we cannot typically
-ensure the relative timing of confounders, treatments, and outcomes. For
-this reason, we should collect time-series data to ensure that the
-relative timing of events assumed in our model is appropriate.
+\textbf{over-conditioning bias.} Over-conditioning bias occurs when
+adjusting for variables that either lie on the causal path between
+treatment and outcome or act as mediators or colliders. Such adjustment
+can distort the causal relationships, potentially blocking the effect of
+interest or introducing spurious associations.
+
+Let us denote the relative timing of events using subscripts. Here, we
+assume that \(A_1 \to B_2 \to C_3\). It is clear from the rules of
+d-separation that \(A_{1} \rightarrow \boxed{B_2} \rightarrow C_{3}\)
+(conditioning on \(B_2\)) blocks the path from \(A_1\) to \(C_3\).
+However, what if \(B_0 \to A_1\) and \(B_0 \to C_3\). The rules of
+d-separation tell us that to obtain an unbiased causal effect estimate
+of \(A_1 \to C_3\) we must condition on \(B_0\). With cross-sectional
+data we cannot typically ensure the relative timing of confounders,
+treatments, and outcomes. For this reason, we should collect time-series
+data to ensure that the relative timing of events assumed in our model
+is appropriate.
 
 In some cases, investigators may want to distinguish between direct and
 indirect effects, as is done in causal mediation analysis. However,
@@ -1023,8 +1055,9 @@ however interested readers may refer to VanderWeele
 (\citeproc{ref-vanderweele2015}{2015}); Bulbulia
 (\citeproc{ref-bulbulia2024swigstime}{2024c}).
 
-\paragraph{Causal Structure 4: The Collider Structure---A Common
-Effect}\label{causal-structure-4-the-collider-structurea-common-effect}
+\paragraph{Causal Structure 4: The Collider Structure: Conditioning on
+the Common Effect of a Treatment and
+Outcome.}\label{causal-structure-4-the-collider-structure-conditioning-on-the-common-effect-of-a-treatment-and-outcome.}
 
 The collider structure (\(A \to C\), \(B \to C\)) occurs when two
 variables \(A\) and \(B\) independently cause a common effect \(C\).
@@ -1038,52 +1071,62 @@ between \(A\) and \(B\). Graphically:
 
 This gives us two rules:
 
-\paragraph{Rule 4: Do Not Condition on a
-Collider}\label{rule-4-do-not-condition-on-a-collider}
+\paragraph{Rule 4: Do Not Condition on a Collider of the Treatment and
+Outcome}\label{rule-4-do-not-condition-on-a-collider-of-the-treatment-and-outcome}
 
 When assessing the causal effect of \(A\) on \(B\), avoid conditioning
 on a collider (\(C\)) or its descendants, as it may introduce a
 misleading association between \(A\) and \(B\).
 
-\paragraph{Rule 5: Do Not Condition on Descendants of
-Colliders}\label{rule-5-do-not-condition-on-descendants-of-colliders}
+\paragraph{Rule 5: Do Not Condition on Descendants of Colliders of the
+Treatment and
+Outcome}\label{rule-5-do-not-condition-on-descendants-of-colliders-of-the-treatment-and-outcome}
 
-Because causation induces association, conditioning on a descendant is
-akin to conditioning on its parent. As such a descendant functions as a
-\emph{proxy} for its parent. We should thus avoid conditioning on a
-descendant of a collider (or mediator).
+Causal relationships induce associations. Conditioning on a descendant
+of a collider is similar to conditioning on its parent, as the
+descendant serves as a proxy for its parent. Therefore, we should avoid
+conditioning on a descendant of a collider (or mediator).
 
-\subparagraph{Motivating Example}\label{motivating-example-3}
+\paragraph{Conditioning on a Collider: Motivating
+Example}\label{conditioning-on-a-collider-motivating-example}
 
-Suppose we want to assess if access to green spaces (\(A\)) makes people
-happier (\(B\)). If we condition on health status (\(C\)), which is
-affected by both \(A\) and \(B\), we may introduce a spurious
-association between \(A\) and \(B\). This is because conditioning on
-\(C\) creates an artificial link between \(A\) and \(B\), even if no
-direct causal relationship exists. Specifically, among unhealthy
-individuals (low \(C\)), those with high green space access (\(A\)) may
-appear less happy (\(B\)). When we stratify by \(C\), a negative
-association emerges, even if \(A\) and \(B\) are not causally linked.
-Likewise, among healthy individuals (high \(C\)), those with low green
-space access (\(A\)) may be happier (\(B\)). Stratifying by \(C\) would
-suggest a negative association between green space access and happiness
-in the absence of any causal relationship.
+Consider a scenario where we want to determine whether access to green
+spaces (\(A\)) makes people happier (\(B\)). If we condition on health
+status (\(C\)), which is influenced by both \(A\) and \(B\), we may
+introduce a spurious association between \(A\) and \(B\). This occurs
+because conditioning on \(C\) creates an artificial link between \(A\)
+and \(B\), even if no direct causal relationship exists between them.
 
-This example again illustrates the risks of \textbf{over-conditioning
-bias.} By ensuring that confounders precede both the treatment and the
-outcome, we can often avoid collider bias -- often, but not always.
-Below we consider how adjusting for pre-treatment confounders may induce
-collider bias. Elsewhere, we consider how conditioning on post-treatment
-proxies for pre-treatment confounders (\(\L^prime\)) may be sensible
-strategy for confounding control (refer to Bulbulia
-(\citeproc{ref-bulbulia2023}{2024b})). For now, we simply note that
-collider bias is a type of over-conditioning bias, one whose threat to
-valid causal inference can be understood by referring to elementary
-relationships assumed in a causal DAG.
+For instance, among individuals with poor health (low \(C\)), those with
+greater access to green spaces (\(A\)) may appear less happy (\(B\)).
+When we stratify by \(C\), a negative association between green space
+access and happiness might emerge, even if \(A\) and \(B\) are not
+causally related. Similarly, among healthy individuals (high \(C\)),
+those with less access to green spaces (\(A\)) may seem happier (\(B\)),
+again suggesting a negative association upon stratifying by \(C\).
 
-\subsubsection{Complex Causal Relationships Are Composed of Basic
-Structures That We
-Assume}\label{complex-causal-relationships-are-composed-of-basic-structures-that-we-assume}
+This example demonstrates the risks of over-conditioning bias. By
+ensuring that confounders precede both the treatment and the outcome, we
+can often avoid collider bias, though not always. In our upcoming
+discussion of M-bias, we will explore how adjusting for pre-treatment
+confounders may sometimes induce collider bias. Additionally, we will
+discuss when conditioning on post-treatment proxies for pre-treatment
+confounders (\(L^\prime\)) may be a practical strategy for confounding
+control.
+
+For now, it is essential to recognise that collider bias is a form of
+over-conditioning bias. Its threat to valid causal inference can be
+understood by examining the basic relationships in a causal Directed
+Acyclic Graph (DAG). Over-conditioning bias has not been fully
+appreciated in traditional structural equation modelling approaches.
+Pearl's rules of d-separation show that when two arrows converge on the
+same node, their parent nodes may become spuriously associated. To
+estimate any causal path, it must remain unblocked by other nodes and
+free from unmeasured common causes.
+
+\subsubsection{Complex Causal Relationships Are Composed of Five
+Elementary Structures Whose Features We
+Assume}\label{complex-causal-relationships-are-composed-of-five-elementary-structures-whose-features-we-assume}
 
 All forms of confounding bias stem from combinations of the basic causal
 structures outlined above (absence of cause, causality, forks, chains,
@@ -1091,14 +1134,43 @@ and colliders). Understanding these elements allows us to identify
 potential confounders based on the assumptions encoded in a causal
 diagram.
 
-Causal directed acyclic graphs (DAGs) provide a framework for
+There are three further observations readers should note.
+
+First, causal directed acyclic graphs (DAGs) provide a framework for
 structuring assumptions about causal relationships. They cannot prove
-causation on their own, as multiple diagrams may be consistent with the
-data. The strength of causal DAGs lies in helping researchers understand
-the implications of their assumptions. Therefore, causal DAGs should be
-created in collaboration with domain experts, and when experts disagree,
-multiple causal diagrams should be proposed to reflect differing
-assumptions.
+causation on their own, as multiple causal diagrams are typically
+consistent with the data. The strength of causal DAGs lies in helping
+researchers understand the implications of their assumptions. Therefore,
+causal DAGs should be created in collaboration with domain experts, and
+when experts disagree, multiple causal diagrams should be proposed to
+reflect differing assumptions.
+
+Second, causal inference relies on the assumption that the treatment
+precedes the outcome in time. Cross-sectional data, that is, data in
+which information is collected at a single point in time, typically
+lacks the temporal resolution that investigators require to establish
+temporal ordering. In the next section we consider problems that
+temporal ambiguity bring beyond the obvious problem of reverse causality
+(it is the outcome that causes the treatment).
+
+Third, longitudinal data, which follow the same subjects over multiple
+time points, allows for a clear temporal ordering of events, however
+longitudinal data are insufficient to establish causality. Of course, by
+tracking when a treatment occurs relative to the outcome, longitudinal
+data enables researchers to establish the sequence necessary to support
+causal claims. Therefore, in studies aiming to make causal inferences,
+longitudinal data should always be sought to confirm that the
+confounders precede the treatment, and the treatment precedes the
+outcome. Yet although longitudinal data are desirable they are not a
+panacea. We have seen that to obtain a causal effect estimate requires a
+workflow that begins by stating a clearly defined causal question, with
+reference to a counterfactual contrast between clearly specified
+treatments applied to a target population. We must then ensure that all
+assumptions required for causal inference are satisfied, most especially
+that treatment effects may be identified from data. Only after we have
+stated our causal question and checked that our data support the causal
+assumptions required to identify our targetted causal estimand may we
+proceed to statistical analysis.
 
 \subsection{Part 3. How to Use Causal Diagrams for Causal Identification
 Tasks- Worked Examples}\label{section-part3}
@@ -1280,7 +1352,7 @@ would function similarly to conditioning on poor health in the previous
 example, introducing collider confounding.
 
 \subsubsection{5. M-bias: Conditioning on Pre-Exposure
-Collider}\label{m-bias-conditioning-on-pre-exposure-collider}
+Collider}\label{section-mbias}
 
 There are only five elementary structures of causality. Every
 confounding scenario can be developed from these five elementary
@@ -1326,7 +1398,7 @@ condition on \(L\): do not control for exercise
   shall avoid proliferating jargon and retain the term ``M bias.''}
 
 \subsubsection{6. Conditioning on a Descendent May Sometimes Reduce
-Confounding}\label{conditioning-on-a-descendent-may-sometimes-reduce-confounding}
+Confounding}\label{section-conditioning-on-descendents}
 
 In Table~\ref{tbl-04} Row 6, we encounter a causal diagram in which an
 unmeasured confounder opens a back-door path that links the treatment
@@ -1757,11 +1829,12 @@ standard practice of reporting all model coefficients may be unwise or
 even misleading (see Westreich and Greenland
 (\citeproc{ref-westreich2013}{2013}); McElreath
 (\citeproc{ref-mcelreath2020}{2020}); Bulbulia
-(\citeproc{ref-bulbulia2023}{2024b})). When multiple treatments are of
-interest, it is essential to ensure that the identification assumptions
-required for each causal effect are satisfied---a task that can be more
-challenging than it appears (see VanderWeele
-(\citeproc{ref-vanderweele2015}{2015}); Hernán \emph{et al.}
+(\citeproc{ref-bulbulia2023}{2024b});
+(\citeproc{ref-Lonati_Lalive_Efferson_2024}{\textbf{Lonati\_Lalive\_Efferson\_2024?}})).
+When multiple treatments are of interest, it is essential to ensure that
+the identification assumptions required for each causal effect are
+satisfied---a task that can be more challenging than it appears (see
+VanderWeele (\citeproc{ref-vanderweele2015}{2015}); Hernán \emph{et al.}
 (\citeproc{ref-hernan2008aObservationalStudiesAnalysedLike}{2008});
 Robins (\citeproc{ref-robins1986}{1986}); Robins and Greenland
 (\citeproc{ref-robins1992}{1992}); Robins and Hernan
@@ -1771,8 +1844,8 @@ Robins (\citeproc{ref-robins1986}{1986}); Robins and Greenland
 Our questions are nearly always causal. We want to know what would
 happen, on average, if we were to intervene in the world. In the
 observational psychological sciences, obtaining such understanding
-requires a paradigm shift from traditional statistical modelling. These
-paradigm shifts have become established in economics, computer science,
+requires a paradigm shift from traditional statistical modelling. Such a
+paradigm shift has become established in economics, computer science,
 and epidemiology, and they are making strong inroads in political
 science. However, in observational psychological sciences, including
 environmental psychology, methods for causal inference remain rare. We
@@ -1786,16 +1859,18 @@ to be coherently addressed.
 There are many good resources available for learning causal directed
 acyclic graphs (\citeproc{ref-barrett2021}{Barrett 2021};
 \citeproc{ref-cinelli2022}{Cinelli \emph{et al.} 2022};
+\citeproc{ref-glymour2008causal}{Glymour and Greenland 2008};
 \citeproc{ref-greenland1999}{Greenland \emph{et al.} 1999},
-\citeproc{ref-greenland1999}{1999};
+\citeproc{ref-greenland1999}{1999}, \citeproc{ref-greenland1999}{1999};
 \citeproc{ref-hernan2024WHATIF}{Hernan and Robins 2024};
 \citeproc{ref-major2023exploring}{Major-Smith 2023};
 \citeproc{ref-mcelreath2020}{McElreath 2020};
 \citeproc{ref-morgan2014}{Morgan and Winship 2014};
-\citeproc{ref-pearl2009a}{Pearl 2009b}; \citeproc{ref-rohrer2018}{Rohrer
-2018}; \citeproc{ref-suzuki2020}{Suzuki \emph{et al.} 2020}). For those
-just getting started on causal diagrams, we recommend Miguel Hernan's
-free course here:
+\citeproc{ref-pearl2009a}{Pearl 2009b};
+\citeproc{ref-pearl_greenland_2007}{Pearl and Greenland 2007};
+\citeproc{ref-rohrer2018}{Rohrer 2018}; \citeproc{ref-suzuki2020}{Suzuki
+\emph{et al.} 2020}). For those just getting started on causal diagrams,
+we recommend Miguel Hernan's free course here:
 \href{https://www.edx.org/learn/data-analysis/harvard-university-causal-diagrams-draw-your-assumptions-before-your-conclusions}{https://www.edx.org/learn/data-analysis/harvard-university-causal-diagrams-draw-your-assumptions-before-your-conclusions,
 accessed 10 June 2024}. For those seeking a slightly more technical but
 still accessible introduction to causal inference and causal DAGs, we
@@ -1920,6 +1995,10 @@ missing: Incorporating bias due to measurement error into the potential
 outcomes framework. \emph{International Journal of Epidemiology},
 \textbf{44}(4), 1452--1459.
 
+\bibitem[\citeproctext]{ref-glymour2008causal}
+Glymour, MM, and Greenland, S (2008) Causal diagrams. \emph{Modern
+Epidemiology}, \textbf{3}, 183--209.
+
 \bibitem[\citeproctext]{ref-greenland1999}
 Greenland, S, Pearl, J, and Robins, JM (1999) Causal diagrams for
 epidemiologic research. \emph{Epidemiology (Cambridge, Mass.)},
@@ -2018,6 +2097,11 @@ inference in statistics: An overview}}.
 
 \bibitem[\citeproctext]{ref-pearl2009a}
 Pearl, J (2009b) \emph{Causality}, Cambridge University Press.
+
+\bibitem[\citeproctext]{ref-pearl_greenland_2007}
+Pearl, J, and Greenland, S (2007) Causal diagrams. In S. Boslaugh, ed.,
+\emph{Encyclopedia of epidemiology}, Thousand Oaks, CA: Sage
+Publications, 149--156.
 
 \bibitem[\citeproctext]{ref-pearl1995a}
 Pearl, J, and Robins, JM (1995) Probabilistic evaluation of sequential
